# books-market

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  api_tests.http  docker-compose.override.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 5847b7f75458_updated_schemas.py  f12c54396cf8_initial_migration.py
configurations/: database.py
docker/postgres/: Dockerfile  create_databases.sql  custom-entrypoint.sh  fix_permissions.sh
routers/v1/: books.py
schemas/: __init__.py
src/: main.py  pytest.ini
src/configurations/: database.py  settings.py
src/models/: __init__,py  books.py  sellers.py
src/routers/: __init__.py
src/routers/v1/: auth.py  books.py  sellers.py
src/schemas/: __init__.py  books.py  sellers.py
src/utils/: auth.py
tests/: conftest.py  test_auth.py  test_books.py  test_sellers.py
