[tool.poetry]
name = "books-market"
version = "0.1.0"
description = ""
authors = ["vladik_pwnz <flashonyt@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.8.0"
asttokens = "3.0.0"
asyncpg = "0.30.0"
certifi = "2025.1.31"
click = "8.1.8"
colorama = "0.4.6"
dnspython = "2.7.0"
email-validator = "2.2.0"
executing = "2.2.0"
fastapi = "0.115.8"
fastapi-cli = "0.0.7"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.7"
httptools = "0.6.4"
httpx = "0.28.1"
icecream = "2.1.4"
idna = "3.10"
iniconfig = "2.0.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.5"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mdurl = "0.1.2"
orjson = "3.10.15"
packaging = "24.2"
pluggy = "1.5.0"
pydantic = "2.10.6"
pydantic-extra-types = "2.10.2"
pydantic-settings = "2.7.1"
pydantic-core = "2.27.2"
pygments = "2.19.1"
pytest = "8.3.4"
pytest-asyncio = "0.25.3"
python-dotenv = "1.0.1"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
rich = "13.9.4"
rich-toolkit = "0.13.2"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.38"
starlette = "0.45.3"
typer = "0.15.1"
typing-extensions = "4.12.2"
ujson = "5.10.0"
uvicorn = "0.34.0"
uvloop = "0.21.0"
watchfiles = "1.0.4"
websockets = "14.2"
black = "^25.1.0"
flake8 = "^7.1.2"
alembic = "^1.15.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
